fixed spacing between counts in sidebar

--- a/app/assets/stylesheets/ideas.css.less
+++ b/app/assets/stylesheets/ideas.css.less
@@ -257,13 +257,22 @@ select#idea_is_public{
       vertical-align: middle;
       margin-right: 3px;
     }
-    &#like_count{
+    &#like_count_ka{
+      width: 32%;
+    }
+    &#view_count_ka{
+      width: 27%;
+    }
+    &#comment_count_ka{
+      width: 38%;
+    }
+    &#like_count_en{
       width: 23%;
     }
-    &#view_count{
+    &#view_count_en{
       width: 31%;
     }
-    &#comment_count{
+    &#comment_count_en{
       width: 38%;
     }
   }
